log/build_2023-04-19_09-59-38/turtle_bot_nodos/stderr.log
/home/sergio/.local/lib/python3.10/site-packages/setuptools/command/install.py:34: SetuptoolsDeprecationWarning: setup.py install is deprecated. Use build and pip and other standards-based tools.
  warnings.warn(
  File "/home/sergio/taller_2_grupo_11/install/turtle_bot_nodos/lib/python3.10/site-packages/turtle_bot_nodos/turtle_bot_position.py", line 43
    def robotPosition(self.duration,self.linear,self.angular,self.angular):
                          ^
SyntaxError: invalid syntax

